# BullDogAlpha

./: .bazelrc  .env.example  .gitignore  BUILD.bazel  Dockerfile.go  Dockerfile.web  MODULE.bazel  README.md  docker-compose.yml  docker_run.sh  go.mod  go.sum  local.flags.example  project_instructions.md  requirements.txt  start_all_services.py  start_all_services_test.py  start_docker_services.py  start_docker_services_test.py
cmd/bar_aggregator/: BUILD.bazel  TESTING.md  main.go  main_test.go
cmd/bff/: BUILD.bazel  TESTING.md  main.go  main_test.go
cmd/data_recorder/: BUILD.bazel  main.go  main_test.go
cmd/ems/: BUILD.bazel  TESTING.md  ems_test.go  main.go
cmd/ems/state/: BUILD.bazel  state_machine.go  wal.go
cmd/mdg/: BUILD.bazel  main.go  main_test.go
cmd/risk_node/: BUILD.bazel  TESTING.md  main.go  risk_node_test.go
cmd/risk_node/interceptor/: BUILD.bazel  risk.go
cmd/risk_node/lua/: risk_check.lua
proto/: BUILD.bazel  TESTING.md  market_data.proto  order.proto  order_test.go  order_test.py  rules.bzl
src/alpha_engine/: BUILD.bazel  TESTING.md  alpha_engine_test.py  backtest_driver.py  backtest_test.py  engine.py
src/alpha_engine/rl/: env.py  features.py
src/alpha_engine/strategies/: TESTING_BACKTEST.md  base.py  rl_strategy.py  trend_strategy.py
web/: BUILD.bazel  README.md  index.html  package-lock.json  package.json  vite.config.ts  web_bazel_test.py
web/src/: App.test.tsx  App.tsx
web/src/__mocks__/: lightweight-charts.js
