module(
    name = "bulldog_alpha",
    version = "0.1.0",
)

# Protobuf and Rules Proto
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")
bazel_dep(name = "protovalidate", version = "1.2.0")

# Go and Gazelle
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.42.0")

# Python
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

# Initialize Go SDK with Go 1.26.0
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.0")

# Configure Go dependencies via Gazelle go_deps
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "build_buf_go_protovalidate",
    "com_github_coder_websocket",
    "com_github_go_zeromq_zmq4",
    "com_github_google_uuid",
    "org_golang_google_protobuf",
)

# Initialize Python Toolchain with Python 3.14
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.14",
)
