load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "bff_lib",
    srcs = ["main.go"],
    importpath = "bulldog_alpha/cmd/bff",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:order_go_proto",
        "@com_github_coder_websocket//:websocket",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//health/grpc_health_v1",
    ],
)

go_binary(
    name = "bff",
    embed = [":bff_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "bff_test",
    srcs = ["main_test.go"],
    embed = [":bff_lib"],
    deps = [
        "//proto:order_go_proto",
        "@com_github_alicebob_miniredis_v2//:miniredis",
        "@com_github_coder_websocket//:websocket",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//health",
        "@org_golang_google_grpc//health/grpc_health_v1",
    ],
)
