load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "mdg_lib",
    srcs = ["main.go"],
    importpath = "bulldog_alpha/cmd/mdg",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:market_data_go_proto",
        "@com_github_coder_websocket//:websocket",
        "@com_github_go_zeromq_zmq4//:zmq4",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//health",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_protobuf//proto",
    ],
)

go_binary(
    name = "mdg",
    embed = [":mdg_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "mdg_test",
    srcs = ["main_test.go"],
    embed = [":mdg_lib"],
    deps = [
        "//proto:market_data_go_proto",
        "@com_github_coder_websocket//:websocket",
        "@com_github_go_zeromq_zmq4//:zmq4",
        "@org_golang_google_protobuf//proto",
    ],
)
