load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "interceptor",
    srcs = ["risk.go"],
    importpath = "bulldog_alpha/cmd/risk_node/interceptor",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:order_go_proto",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@org_golang_google_grpc//:grpc",
    ],
)
